--- a/bbqudasite/templates/base/footer.html
+++ b/bbqudasite/templates/base/footer.html
@@ -7,11 +7,11 @@
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Useful Links</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">About</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Missions</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">API</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Contact Us</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="{% url 'homepage' %}">Home</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="{% url 'about' %}">About</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="{% url 'my_missions' %}">Missions</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="{% url 'api_page' %}">API</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="{% url 'contact' %}">Contact Us</a></li>
             </ul>
           </div>
 
