--- a/bbqudasite/templates/login.html
+++ b/bbqudasite/templates/login.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}Login/Registration - BBQUDA{% endblock title %}
+{% block title %}Login - BBQUDA{% endblock title %}
 {% block content %}
 
 <!-- ======= Header ======= -->
@@ -10,23 +10,26 @@
     <nav id="navbar" class="navbar">
       <ul>
       <li><a href="{% url 'homepage' %}">Home</a></li>
-      <li><a href="about.html">About</a></li>
+      <li><a href="{% url 'about'%}">About</a></li>
       <li class="dropdown"><a href="#"><span>Missions</span> <i class="bi bi-chevron-down"></i></a>
         <ul>
-        <li><a href="{% url 'upload_log'%}">Upload a file</a></li>
+        <li><a  href="{% url 'upload_log'%}">Upload a file</a></li>
         <li><a href="{% url 'my_missions'%}">Uploaded missions</a></li>
-        <li><a href="#">Trail generator</a></li>
-        <li><a href="#">Visualizations</a></li>
+        <li><a href="{% url 'trail_generator'%}">Trail generator</a></li>
+        <li><a href="{% url 'kriging_heatmap' %}">Visualizations</a></li>
         </ul>
     </li>
-      <li><a href="team.html">API</a></li>
+      <li><a href="{% url 'api_page'%}">API</a></li>
       <li><a href="{% url 'contact' %}">Contact Us</a></li>
-      <li><a class="active " href="{% url 'login' %}"><button class="login-button">Login</button></a></li>
-
+      <li>{% if request.user.is_authenticated %}
+        <a href="{% url 'logout' %}"><button class="login-button">Logout</button></a>
+        {% else %}
+        <a href="{% url 'login' %}"><button class="login-button">Login</button></a>
+        {% endif %}
+    </li>
       </ul>
       <i class="bi bi-list mobile-nav-toggle"></i>
   </nav><!-- .navbar -->
-
   </div>
 
   <style>
@@ -43,18 +46,17 @@
 
   <!-- ======= Contact Section ======= -->
   <section class="breadcrumbs">
-      <div class="container">
-
-          <div class="d-flex justify-content-between align-items-center">
-          <h2>Login</h2>
-          <ol>
-              <li><a href="{% url 'homepage' %}">Home</a></li>
-              <li>Login</li>
-          </ol>
-          </div>
-
+    <div class="container">
+      <div class="d-flex justify-content-between align-items-center">
+        <h2>Login</h2>
+        <ol class="nav-2-menu">
+          <li><a id="nav-2" href="{% url 'homepage' %}">Home</a></li>
+          <li><a class="active" href="{% url 'login' %}">Login</a></li>
+        </ol>
       </div>
-      </section><!-- End Contact Section -->
+
+    </div>
+  </section><!-- End Contact Section -->
 
 <div class="card-body" >
           <div class="form-fields-section" >
@@ -63,18 +65,18 @@
                       <form method="post" action="" id="form-login" class="login"><div class="signin form-fields-section kaxsdc" data-event="load">
                           {% csrf_token %}
 
-                          <h1> Log In </h1>
+                          <h4 class="login-title"> Login</h4>
 
                           <div class="returningCustomer bg-form">
                                   <fieldset>
                                       <ol id="login-form-headings">
-                                          <li class="field field--content">
+                                          <li id= "login-boxes" class="field field--content">
                                               {{ form.username.errors }}
                                               {{ form.username.label_tag }}
-                                              {{ form.username }}
+                                              {{form.username }}
                                           </li>
 
-                                          <li class="field field--content">
+                                          <li id= "login-boxes" class="field field--content">
                                               {{ form.password.errors }}
                                               {{ form.password.label_tag }}
                                               {{ form.password }}
