--- a/bbqudasite/templates/register.html
+++ b/bbqudasite/templates/register.html
@@ -1,186 +1,129 @@
-<!DOCTYPE html>
-{% load static %}
+{% extends 'base.html' %}
+{% block title %}Register - BBQUDA{% endblock title %}
+{% block content %}
 
-<html lang="en">
-    <head>
+<!-- ======= Header ======= -->
+<header id="header" class="fixed-top d-flex align-items-center header-transparent">
+  <div class="container d-flex justify-content-between align-items-center">
+    {% include 'base/logo.html' %}
 
+    <nav id="navbar" class="navbar">
+        <ul>
+        <li><a href="{% url 'homepage' %}">Home</a></li>
+        <li><a href="{% url 'about'%}">About</a></li>
+        <li class="dropdown"><a href="#"><span>Missions</span> <i class="bi bi-chevron-down"></i></a>
+          <ul>
+          <li><a  href="{% url 'upload_log'%}">Upload a file</a></li>
+          <li><a href="{% url 'my_missions'%}">Uploaded missions</a></li>
+          <li><a href="{% url 'trail_generator'%}">Trail generator</a></li>
+          <li><a href="{% url 'kriging_heatmap' %}">Visualizations</a></li>
+          </ul>
+      </li>
+        <li><a href="{% url 'api_page'%}">API</a></li>
+        <li><a href="{% url 'contact' %}">Contact Us</a></li>
+        <li>{% if request.user.is_authenticated %}
+          <a href="{% url 'logout' %}"><button class="login-button">Logout</button></a>
+          {% else %}
+          <a href="{% url 'login' %}"><button class="login-button">Login</button></a>
+          {% endif %}
+      </li>
+        </ul>
+        <i class="bi bi-list mobile-nav-toggle"></i>
+    </nav><!-- .navbar -->
 
-    <meta charset="utf-8" />
+  </div>
 
-<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+  <style>
 
-<title>
+    .errorlist
+        {
+            color: red;
+        }
 
- BBQUDA
+    </style>
+</header><!-- End Header -->
 
-</title>
+<main id="main">
 
-<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
+  <!-- ======= Contact Section ======= -->
+  <section class="breadcrumbs">
+    <div class="container">
 
-<!--     Fonts and icons     -->
+      <div class="d-flex justify-content-between align-items-center">
+        <h2>Register</h2>
+        <ol class="nav-2-menu">
+          <li><a id="nav-2" href="{% url 'homepage' %}">Home</a></li>
+          <li><a id="nav-2" href="{% url 'login' %}">Login</a></li>
+          <li><a class="active" href="{% url 'register' %}">Register</a></li>
+        </ol>
+      </div>
 
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet" />
-
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-
-<!-- CSS Files -->
-
-<link href="{% static "css/bootstrap.min.css" %}" rel="stylesheet" />
-<link href="{% static "css/now-ui-dashboard.min.css" %}" rel="stylesheet" />
-<link href="{% static "css/demo.css" %}" rel="stylesheet" />
-<link rel="stylesheet" href="https://d19m59y37dris4.cloudfront.net/obaju/2-1-1/vendor/bootstrap/css/bootstrap.min.css">
-  
- 
-  <div><style>
-  
-.errorlist
-    {
-        color: red;
-    }
-
-</style>
-
-    
-  
-        <div class="wrapper ">
-          
-            <div class="sidebar" data-color="orange">
-    
-    <div class="sidebar-wrapper" id="sidebar-wrapper">
-        
     </div>
-</div>
+  </section><!-- End Contact Section -->
 
-
-            <div class="main-panel" id="main-panel">
-              <!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-transparent  bg-primary  navbar-absolute">
-	<div class="container-fluid">
-    <div class="navbar-wrapper">
-      
-			
-      
-			<a class="navbar-brand" >BBQUDA - Website for visualizing mission logs obtained from the EcoMapper and Heron drones. </a>
-		</div>
-
-		
-
-	    <div class="collapse navbar-collapse justify-content-end" id="navigation">
-      
-<ul class="navbar-nav">
- 
-
-  
-</ul>
-
-        
-	    </div>
-	</div>
-</nav>
-<!-- End Navbar -->
-
-                  <div class="panel-header panel-header-sm">
-  
-  
-</div>
-
-
-                  <div class="content" style="background-image: url('{% static "heron.jpg" %}'); background-repeat: no-repeat; background-size: 100% 100%;">
-                      <div class="row">
-  <div class="col-md-12">
-    
-
-<div class="card" style = "width:50%">
-    <div class="card-header">
-       
-        
-    </div>
-    <div class="card-body">
+    <div class="card-body" id="registration-form" style="text-align: center; margin-left: auto; margin-right: auto;">
         <div class="table-responsive">
-            <table class="table">
-                
-<tbody>
-<div class="form-fields-section">
+            <table class="table" >
+                <tbody>
+                    <div class="form-fields-section">
 
-              <h1>Create an Account</h1>
-              
+                        <h4 class="login-title">Register</h4>
 
-<div class="registration">
+                        <div class="registration">
+                            <div class="bg-form">
+                                <form method="post" novalidate>
+                                        {% csrf_token %}
 
-                <div class="bg-form">
-                   
-                    <form method="post" novalidate>
-                            {% csrf_token %}
+                                        {{ form.non_field_errors }}
 
-                            {{ form.non_field_errors }}
+                                        {{ form.source.errors }}
+                                        {{ form.source }}
+                                        <ul class="registration-list">
+                                            <li  id= "login-boxes" class="field">
+                                                {{ form.first_name.errors }}{{form.first_name}}
 
-                            {{ form.source.errors }}
-                            {{ form.source }}
-                            <ul>
-                                <li class="field">
-                                    {{ form.first_name.errors }}{{form.first_name}}
-                                        
-                                </li>
-                                <li class="field">
-                                    {{ form.last_name.errors }}{{form.last_name}}
-                                    </li>
-                                <li class="field">
-                                    {{ form.email.errors }}{{form.email}}
-                                    </li>
-                                <li class="field">
-                                    {{ form.username.errors }}{{form.username}}
-                                    </li>
-                                 <li class="field">
-                                    {{ form.password1.errors }}{{form.password1}}
-                                    </li>
-                                <li class="field">
-                                    {{ form.password2.errors }}{{form.password2}}
-                                    </li>
-                                </ul>
-                      
-                     <button type="submit" class="btn btn-default btn-lg btn-block">Register</button>
-                     
-                     </form>
+                                            </li>
+                                            <li  id= "login-boxes" class="field">
+                                                {{ form.last_name.errors }}{{form.last_name}}
+                                                </li>
+                                            <li  id= "login-boxes" class="field">
+                                                {{ form.email.errors }}{{form.email}}
+                                                </li>
+                                            <li  id="login-boxes" class="field">
+                                                {{ form.username.errors }}{{form.username}}
+                                                </li>
+                                                <li  id= "login-boxes" class="field">
+                                                {{ form.password1.errors }}{{form.password1}}
+                                                </li>
+                                            <li  id= "login-boxes" class="field">
+                                                {{ form.password2.errors }}{{form.password2}}
+                                                </li>
+                                        </ul>
 
-                            <div class="separator">
-                         
-                                <hr>
-                                
+                                    <button type="submit" id="submit-button" class="btn btn-default btn-lg btn-block">Register</button>
+
+                                </form>
+
+                                <div class="separator">
+                                    <hr>
+                                </div>
+
+                                <a href="{%url 'login'%}" class="cw-btn cw-btn--default cw-btn--full js-sign-in">Already Have an Account? Sign In</a>
+
+                                </fieldset>
+
+                                </div>
                             </div>
-                            <a href="{%url 'login'%}" class="cw-btn cw-btn--default cw-btn--full js-sign-in">Already Have an Account? Sign In</a>
-
-                        </fieldset>
-
-                       
-                        
-                </div>
-              </div>
-            </div>
-                    
+                    </div>
                 </tbody>
             </table>
         </div>
     </div>
-</div>
 
-  </div>
-  <div class="col-md-12">
-    
 
-  </div>
-</div>
+</main>
 
-                  </div>
-
-                 
-             </div>
-          
-        </div>
-        
-          
-    </body>
-
-</html>
+{% endblock %}
 
 
 
